Bug 1386742 - Fix a transcription error in the APZ autoscroll calculation. r=kats

MozReview-Commit-ID: DNVBRR6wucU

--HG--
extra : rebase_source : 45097a948b6a26cf1dbc1ed53741cd180d22b34a